docs/0.7/_sources/api/gammapy.spectrum.models.PowerLaw2.rst.txt
PowerLaw2
=========

.. currentmodule:: gammapy.spectrum.models

.. autoclass:: PowerLaw2
   :show-inheritance:

   .. rubric:: Methods Summary

   .. autosummary::

      ~PowerLaw2.__call__
      ~PowerLaw2.copy
      ~PowerLaw2.energy_flux
      ~PowerLaw2.energy_flux_error
      ~PowerLaw2.evaluate
      ~PowerLaw2.evaluate_error
      ~PowerLaw2.from_dict
      ~PowerLaw2.integral
      ~PowerLaw2.integral_error
      ~PowerLaw2.inverse
      ~PowerLaw2.plot
      ~PowerLaw2.plot_error
      ~PowerLaw2.spectral_index
      ~PowerLaw2.to_dict
      ~PowerLaw2.to_sherpa

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
   .. automethod:: to_sherpa
